<resources>
    <string name="app_name">Easy Deals</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_account">Create account</string>
    <string name="email">Email</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="phone">Phone</string>
    <string name="signup">Signup</string>
    <string name="reset_password">Reset password</string>
</resources>