<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/fragmentLogin">

    <fragment
        android:id="@+id/fragmentLogin"
        android:name="com.losersclub.easydeals.fragment.FragmentLogin"
        android:label="@string/login">
        <action
            android:id="@+id/action_fragmentLogin_to_fragmentSignup"
            app:destination="@id/fragmentSignup" />
        <action
            android:id="@+id/action_fragmentLogin_to_fragmentPasswordReset"
            app:destination="@id/fragmentPasswordReset" />
    </fragment>
    <fragment
        android:id="@+id/fragmentSignup"
        android:name="com.losersclub.easydeals.fragment.FragmentSignup"
        android:label="@string/signup" />
    <fragment
        android:id="@+id/fragmentPasswordReset"
        android:name="com.losersclub.easydeals.fragment.FragmentPasswordReset"
        android:label="@string/reset_password" />
</navigation>