<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.FragmentLogin">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_username"
                android:hint="@string/username"
                app:errorIconDrawable="@drawable/ic_error"
                android:layout_margin="@dimen/margin_normal"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_username"
                    android:inputType="text"
                    android:maxLines="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_password"
                android:hint="@string/password"
                app:errorIconDrawable="@drawable/ic_error"
                android:layout_margin="@dimen/margin_normal"
                app:passwordToggleEnabled="true"
                app:passwordToggleDrawable="@drawable/ic_visibility"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_input_username"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_login"
                android:text="@string/login"
                android:layout_margin="@dimen/margin_normal"
                app:layout_constraintTop_toBottomOf="@id/text_input_password"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn_signup"
                android:text="@string/create_account"
                android:layout_margin="@dimen/margin_normal"
                app:layout_constraintTop_toBottomOf="@id/text_input_password"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn_password_reset"
                android:text="@string/forgot_your_password"
                android:layout_margin="@dimen/margin_normal"
                app:layout_constraintTop_toBottomOf="@id/btn_signup"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>